pscpre1/base/qna-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: qna-api
spec: {}
status:
  loadBalancer: {}
