pscpre1/base/qna-api/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  name: qna-api
spec: {}
status:
  loadBalancer: {}
